// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overlay > should close when clicked outside 1`] = `
<div>
  <div
    aria-hidden="true"
    data-dismissed="false"
    data-overlay-root=""
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Overlay > should close when clicked outside 2`] = `
<div>
  <div
    aria-hidden="true"
    data-dismissed="true"
    data-overlay-root=""
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Overlay > should close when escape key is pressed 1`] = `
<div>
  <div
    aria-hidden="true"
    data-dismissed="false"
    data-overlay-root=""
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Overlay > should close when escape key is pressed 2`] = `
<div>
  <div
    aria-hidden="true"
    data-dismissed="true"
    data-overlay-root=""
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Overlay > should render empty 1`] = `
<div>
  <div
    aria-hidden="true"
    data-dismissed="false"
    data-overlay-root=""
    role="presentation"
  >
    <!---->
  </div>
  
</div>
`;
